# anty-if

./: classifiers.txt  cosmic-ray.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: gilded_rose.yml
gilded_rose/: .pylintrc  MANIFEST.in  README.md  setup.cfg  setup.py  texttest_fixture.py  tox.ini
gilded_rose/src/: gilded_rose.py
gilded_rose/src/gilded_rose/: __init__.py  gilded_rose.py  inventory.py
gilded_rose/tests/: test_acceptance.py  test_gilded_rose.py  test_stories.py  texttest_fixture.py
src/gilded_rose/: __init__.py  gilded_rose.py  inventory.py  item.py
tests/: test_acceptance.py  test_gilded_rose.py
