[metadata]
name = gilded_rose
version="2.0.0dev0"
author = Lukasz Zukowski
author_email = lukasz.zukowski@gmail.com
maintainer = Lukasz Zukowski
maintainer_email = lukasz.zukowski@gmail.com
license = Free For Home Use
url = https://lukeonpython.blog/
description = Anti IF course : Gilded Rose Kata [https://anti-if-1583.pflms.com/]
keywords = gilded rose, Arkency, refactoring
classifiers = file: classifiers.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.9

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
omit = tests/*

[coverage:report]
fail_under = 100
exclude_lines =
    def __repr__
    @abstractmethod
    raise NotImplementedError
    raise
    except:

[mypy]
python_version = 3.9
show_column_numbers = True

[pycodestyle]
max_line_length = 80
show_pep8 = True
show_source = True

[flake8]
max-line-length = 80
