[metadata]
author = Łukasz Żukowski
author_email = lukasz.zukowski@gmail.com
maintainer = Łukasz Żukowski
maintainer_email = lukasz.zukowski@gmail.com
license = Free For Home Use
url = https://anti-if-1583.pflms.com/
description = Anti IF course : Gilded Rose Kata
keywords = gilded rose, Arkency, refactoring
classifiers = file: classifiers.txt
long_description = file: README.md
long_description_content_type = text/markdown

[bdist_wheel]
python-tag = py38
