[metadata]
author = Lukasz Zukowski
author_email = lukasz.zukowski@gmail.com
maintainer = Lukasz Zukowski
maintainer_email = lukasz.zukowski@gmail.com
license = Free For Home Use
url = https://anti-if-1583.pflms.com/
description = Anti IF course : Gilded Rose Kata
keywords = gilded rose, Arkency, refactoring
classifiers = file: classifiers.txt
long_description = file: README.md
long_description_content_type = text/markdown

[bdist_wheel]
python-tag = py38

[coverage:run]
branch = True

[coverage:report]
fail_under = 100
exclude_lines =
    def __repr__
    @abstractmethod
    raise NotImplementedError
    raise
    except:

[mypy]
python_version = 3.8
show_column_numbers = True

[pycodestyle]
max_line_length = 80
show_pep8 = True
show_source = True

[flake8]
max-line-length = 80
